# polybee

./: .gitignore  ANALYSIS_WORKFLOW.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.lemon-from-repo  NOTES.md  PARAM-NOTES.md  README.md  WHEREAMI.md  clear-output-dir  do-evol  do-island-test  do-island-test-2  do-island-test-4  evolve-entrance-positions-4-rows.cfg  make  make-debug  make-release  out2.txt  out3.txt  periodic-cp-to-pcd  plot_emd_scores.py  polybee.cfg  run  run-debug  run-evolved-door-pos-min-visit-ct-3  run-release  target-heatmap-12x16-uniform.csv  target-heatmap-13x16-4-rows.csv  target-heatmap-8x8-uniform.csv  target-heatmap-9x9-needle-centre.csv  target-heatmap-9x9-uniform.csv  visualize_heatmap.py
.github/: copilot-instructions.md
config-files/: barrier-and-bridge-expts-BAR-BRG.cfg  barrier-and-bridge-expts-BAR.cfg  barrier-and-bridge-expts-BRG.cfg  barrier-and-bridge-expts-base.cfg  evolve-4-entrance-1-hive-positions.cfg  evolve-4-entrance-1o-hive-positions.cfg  evolve-bridge-and-barrier-tests-B.cfg  evolve-bridge-and-barrier-tests-BX.cfg  evolve-bridge-and-barrier-tests-EHBX.cfg  evolve-bridge-and-barrier-tests-X.cfg  evolve-entrance-positions-4-rows-with-energetics-2.cfg  evolve-entrance-positions-4-rows-with-energetics.cfg  evolve-entrance-positions-4-rows.2.cfg  evolve-entrance-positions-4-rows.3.cfg  evolve-entrance-positions-4-rows.cfg  evolve-entrance-positions-with-energetics-4-rows.cfg  net-expt-1a.cfg  net-expt-1b.cfg  net-expt-1c.cfg  net-expt-1d.cfg  net-expt-visit-ct-1a.cfg  net-expt-visit-ct-1b.cfg  net-expt-visit-ct-1c.cfg  net-expt-visit-ct-1d.cfg  param-config-tests-with-energetics.cfg  patch-arrangement-expts-HC.cfg  patch-arrangement-expts-VC.cfg  patch-arrangement-expts-VHC.cfg  patch-arrangement-expts-base.cfg  plant-pos-test.cfg  polybee-800x800.cfg  polybee-900x900.cfg  polybee.cfg  test-bee-energetics-1.cfg  test-net-types.cfg
include/: Bee.h  Environment.h  Flowmap.h  Heatmap.h  Hive.h  LocalVis.h  Params.h  Plant.h  PolyBee.h  PolyBeeCore.h  PolyBeeEvolve.h  Tunnel.h  lemon_thresholded_emd.hpp  polybeeConfig.h.in  utils.h
m3/expts/test-evolve-barriers/: .test-evolve-barriers.slurm.kate-swp  test-evolve-barriers.cfg  test-evolve-barriers.slurm
m3/slurm-info/: SLURM_INFO.md
output-keep/barrier-and-bridge-expts/: EXPTLOG.md
output-keep/barrier-and-bridge-expts/1000-iterations/: stats-visit-fractions-barrier-and-bridge-expts.txt
output-keep/barrier-and-bridge-expts/2500-iterations/: stats-visit-fractions-barrier-and-bridge-expts.txt
output-keep/evol-with-energetics/: out-sga-with-energetics-100-bees-150-reps-50-gens.csv  out-sga-with-energetics-100-bees-150-reps-50-gens.txt
output-keep/evol-with-energetics-median-emd/: out-sga-with-energetics-median-emd-100-bees-150-reps-50-gens.txt
output-keep/evolve-4-entrance-1f-hive-positions/: evolve-4-entrance-1f-hive-positions-evo-results-20260227-182532-b83f57.txt  out-evolve-4-entrance-1f-hive-positions.txt
output-keep/evolve-4-entrance-1f-hive-positions/run-2/: evolve-4-entrance-1f-hive-positions-evo-results-20260301-132052-39ccc2.txt  out-evolve-4-entrance-1f-hive-positions.txt
output-keep/evolve-4-entrance-1o-hive-positions/: out-evolve-4-entrance-1o-hive-positions.txt
output-keep/evolve-bridge-and-barrier-tests/B-free/: EXPTLOG.md  (+1 more)
output-keep/island-model-test/: EXPTLOG.md  evolve-entrance-positions-4-rows-with-energetics-evo-results-20260114-135038-ec6ac2.txt  out-island-test.txt
output-keep/island-model-test-2/: EXPTLOG.md  evolve-entrance-positions-4-rows-with-energetics-evo-results-20260120-185636-7e2355.txt  out-island-test.txt
output-keep/island-model-test-3/: EXPTLOG.md  out-island-test.txt
output-keep/island-model-test-4/: EXPTLOG.md  evolve-entrance-positions-4-rows-with-energetics-evo-results-20260126-180809-2454a2.txt  out-island-test.txt
output-keep/island-model-test-4b/: EXPTLOG.md  evolve-entrance-positions-4-rows-with-energetics-evo-results-20260126-202537-669c9c.txt  out-island-test.txt
output-keep/net-expts/: EXPTLOG.md  net-expt-1b-emd-values.txt  net-expt-1c-emd-values.txt  stats-summary.txt
output-keep/net-expts-emd/: net-expt-1a-emd-values.txt  net-expt-1d-emd-values.txt
output-keep/net-expts-visit-ct/: net-expt-visit-ct-1a-SVF-values.txt  net-expt-visit-ct-1b-SVF-values.txt  net-expt-visit-ct-1c-SVF-values.txt  net-expt-visit-ct-1d-SVF-values.txt  stats-summary-net-expt-visit-ct.txt
output-keep/opt-visit-ct-min-3-max-1000/: evolve-entrance-positions-4-rows-with-energetics-evo-results-20260211-144542-be61af.txt
output-keep/optimization-alg-tests/: run-output-emd-approx-de1220-50-10-100.out.txt  run-output-emd-approx-de1220-7-10-100.out.txt  run-output-emd-approx-sade-7-10-100.out.txt  run-output-emd-full-de1220-7-10-100.out.txt  run-output-emd-hat-de1220-7-10-100.out.txt  run-output-emd-hat-de1220-delta-nbees-7-10-100.out.txt
output-keep/param-config-tests-with-energetics/: EXPTLOG.md
output-keep/patch-arrangement-expts/: EXPTLOG.md  stats-visit-fractions-patch-arrangement-expts.txt
pagmo-tests/: out-sga-1.txt
prompts/: prompt-and-response-to-debug-flow-bias.txt  prompt-for-cfg-gen-util.txt
run-scripts/: do-evol-with-energetics  do-evolve-4-entrance-1f-hive-positions  do-evolve-4-entrance-1o-hive-positions  do-island-test  do-island-test-3  do-island-test-4b  do-opt-visit-ct-min-1-max-1000  do-opt-visit-ct-min-3-max-1000
slurm/: SLURM_INFO.md
src/: Bee.cpp  Environment.cpp  Flowmap.cpp  Heatmap.cpp  Hive.cpp  LocalVis.cpp  Params.cpp  Plant.cpp  PolyBee.cpp  PolyBeeCore.cpp  PolyBeeEvolve.cpp  Tunnel.cpp  main.cpp  utils.cpp
tools/: best_individual_to_cfg.py  combine_heatmaps.py  gen_angdelta-heatmap.py  gen_angdelta_data.py  gen_barrier_flowmap.py  gen_bx_heatmaps.py  gen_champion_fitness_csv.py  gen_slurm_file.py  merge_flowmaps.py  newclass.py  plot_boxplot.py  plot_emd_scores.py  plot_emd_scores_islands.py  plot_fitness.py  plot_fitness_islands.py  plot_stats_chart.py  run-cross-analysis.sh  run_analysis.sh  stats.py  sum-heatmap.awk  visualize_angdelta_histogram.py  visualize_flowmap.py  visualize_heatmap.py
(+4861 files in other folders)
